--- a/man/en/print.html
+++ b/man/en/print.html
@@ -2627,8 +2627,9 @@ mod foo
 Available recipes:
     foo ... # foo is a great module!
 </code></pre>
-<p>See the
-<a href="https://github.com/casey/just/issues/929">module stabilization tracking issue</a>
+<p>Modules are still missing a lot of features, for example, the ability to depend
+on recipes and refer to variables in other modules. See the
+<a href="https://github.com/casey/just/issues/2252">module improvement tracking issue</a>
 for more information.</p>
 <div style="break-before: page; page-break-before: always;"></div><h3 id="hiding-justfiles"><a class="header" href="#hiding-justfiles">Hiding <code>justfile</code>s</a></h3>
 <p><code>just</code> looks for <code>justfile</code>s named <code>justfile</code> and <code>.justfile</code>, which can be
